--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -145,7 +145,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 							<label for="hearts"><img  src="Imagens/Logo1.png" style="width: 8vw; height: 9vh;"><br>
 								<div id="Separador_Esq_carroussel"><img  src="Imagens/Automate fundo Branco.png" style="margin-top: 1%; height: Calc(11vh + 11vw);"></div>
 								<div id="Separador_Dir_carroussel">
-									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif;font-size: 1.3vw; text-align:justify;">
+									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif; text-align:justify;">
 									<br>
 									O Automate é uma das mais econômicas ferramentas de RPA do mercado, com uma <br>interface simples e amigável,
 									é uma ótima opção para usuários sem muita experiência,<br> por proporcionar organização de demandas
