--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -133,7 +133,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 							<label for="clubs"><img  src="Imagens/Logo1.png" style="width: 8vw; height: 9vh;"><br>
 								<div id="Separador_Esq_carroussel"><img  src="Imagens/open4.png" style="margin-top: -2%; width: 20vw; height: 37vh;"></div>
 								<div id="Separador_Dir_carroussel">
-									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif;font-size: 5vw; text-align:justify;">
+									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif; text-align:justify;">
 									<br>
 									O Open RPA é uma ferramenta de automação de processo pouco utilizada no mercado<br> mas com 
 									um potencial enorme de crescimento. A partir do custo zero para aquisição<br> e da fácil implementação
