--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -136,7 +136,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif; text-align:justify;">
 									<br>
 									O Open RPA é uma ferramenta de automação de processo pouco<br> utilizada no mercado mas com 
-									um potencial enorme de crescimento. A partir do custo zero<br> para aquisição e da fácil implementação
+									um potencial enorme de crescimento.<br> A partir do custo zero para aquisição e da fácil implementação
 									em diversos ambientes, é uma ótima opção para automações <br>com baixo orçamento para investimento.
 									</p>
 									
