--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -137,7 +137,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 									<br>
 									O Open RPA é uma ferramenta de automação de processo pouco<br> utilizada no mercado mas com 
 									um potencial enorme de crescimento.<br> A partir do custo zero para aquisição e da fácil implementação
-									em diversos ambientes, é uma ótima opção para automações <br>com baixo orçamento para investimento.
+									em<br> diversos ambientes, é uma ótima opção para automações com baixo orçamento para investimento.
 									</p>
 									
 								</div>
