--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -147,9 +147,9 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 								<div id="Separador_Dir_carroussel">
 									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif; text-align:justify;">
 									<br>
-									O Automate é uma das mais econômicas ferramentas de RPA do mercado, com uma <br>interface simples e amigável,
-									é uma ótima opção para usuários sem muita experiência,<br> por proporcionar organização de demandas
-									e escalabilidade para automações dos mais<br> diversos tipos, com sua gama completa e avançada de ações.
+									O Automate é uma das mais econômicas ferramentas de RPA do mercado, com uma interface simples e amigável,
+									é uma ótima opção para usuários sem muita experiência, por proporcionar organização de demandas
+									e escalabilidade para automações dos mais diversos tipos, com sua gama completa e avançada de ações.
 									</p>
 								</div>
 							</label>
@@ -158,8 +158,8 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 								<div id="Separador_Dir_carroussel">
 									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif;font-size:  1.3vw; text-align:justify;">
 									<br>
-									UiPath é um dos líderes de mercado de RPA, a ferramenta com o maior índice de <br> crescimento dos últimos tempos,
-									atingiu este patamar com uma avançada interface de <br>funcionalidades para automatização de tarefas simples às mais avançadas.
+									UiPath é um dos líderes de mercado de RPA, a ferramenta com o maior índice de crescimento dos últimos tempos,
+									atingiu este patamar com uma avançada interface de funcionalidades para automatização de tarefas simples às mais avançadas.
 									</p>
 								</div>
 							</label>
@@ -168,10 +168,10 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 								<div id="Separador_Dir_carroussel">
 									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif;font-size:  1.3vw; text-align:justify;">
 									<br>
-									O Automation Anywhere é uma das maiores tendências do mercado de RPA atualmente,<br>
-									além de ser uma plataforma de fácil manipulação, se destaca por ser completa e possuir <br>
-									diversas funcionalidades extras em um único lugar, como guias de auditoria,<br> cofres de dados 
-									e dashboards para rastreamento de resultados.<br>
+									O Automation Anywhere é uma das maiores tendências do mercado de RPA atualmente,
+									além de ser uma plataforma de fácil manipulação, se destaca por ser completa e possuir
+									diversas funcionalidades extras em um único lugar, como guias de auditoria, cofres de dados 
+									e dashboards para rastreamento de resultados.
 									</p>
 								</div>
 							</label>
