--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -147,7 +147,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 								<div id="Separador_Dir_carroussel">
 									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif; text-align:justify;">
 									<br>
-									O Automate é uma das mais econômicas ferramentas de RPA do mercado, com uma interface simples e amigável,
+									O Automate é uma das mais econômicas ferramentas de RPA do<br> mercado, com uma interface simples e amigável,
 									é uma ótima opção para usuários sem muita experiência, por proporcionar organização de demandas
 									e escalabilidade para automações dos mais diversos tipos, com sua gama completa e avançada de ações.
 									</p>
