--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -148,7 +148,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif; text-align:justify;">
 									<br>
 									O Automate é uma das mais econômicas ferramentas de RPA do<br> mercado, com uma interface simples e amigável,
-									é uma ótima opção para usuários sem muita experiência, por proporcionar organização de demandas
+									é uma ótima opção<br> para usuários sem muita experiência, por proporcionar organização de demandas
 									e escalabilidade para automações dos mais diversos tipos, com sua gama completa e avançada de ações.
 									</p>
 								</div>
