--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -149,7 +149,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 									<br>
 									O Automate é uma das mais econômicas ferramentas de RPA do<br> mercado, com uma interface simples e amigável,
 									é uma ótima opção<br> para usuários sem muita experiência, por proporcionar organização<br> de demandas
-									e escalabilidade para automações dos mais diversos tipos, com sua gama completa e avançada de ações.
+									e escalabilidade para automações dos mais diversos<br> tipos, com sua gama completa e avançada de ações.
 									</p>
 								</div>
 							</label>
