--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -158,7 +158,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 								<div id="Separador_Dir_carroussel">
 									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif;font-size:  1.3vw; text-align:justify;">
 									<br>
-									UiPath é um dos líderes de mercado de RPA, a ferramenta com o maior índice de crescimento dos últimos tempos,
+									UiPath é um dos líderes de mercado de RPA, a ferramenta com o<br> maior índice de crescimento dos últimos tempos,
 									atingiu este patamar com uma avançada interface de funcionalidades para automatização de tarefas simples às mais avançadas.
 									</p>
 								</div>
