--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -159,7 +159,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif;font-size:  1.3vw; text-align:justify;">
 									<br>
 									UiPath é um dos líderes de mercado de RPA, a ferramenta com o<br> maior índice de crescimento dos últimos tempos,
-									atingiu este patamar com uma avançada interface de funcionalidades para automatização de tarefas simples às mais avançadas.
+									atingiu este patamar<br> com uma avançada interface de funcionalidades para automatização de tarefas simples às mais avançadas.
 									</p>
 								</div>
 							</label>
