--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -168,9 +168,10 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 								<div id="Separador_Dir_carroussel">
 									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif;font-size:  1.3vw; text-align:justify;">
 									<br>
-									O Automation Anywhere é uma das maiores tendências do mercado de RPA atualmente,<br>
-									além de ser uma plataforma de fácil manipulação, se destaca por ser completa e possuir<br>
-									diversas funcionalidades extras em um único lugar, como guias de auditoria, cofres de dados<br> 
+									O Automation Anywhere é uma das maiores tendências do mercado<br>
+									de RPA atualmente, além de ser uma plataforma de fácil manipulação,<br>
+									se destaca por ser completa e possuir diversas funcionalidades extras<br>
+									em um único lugar, como guias de auditoria, cofres de dados<br> 
 									e dashboards para rastreamento de resultados.
 									</p>
 								</div>
