--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -165,7 +165,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 							</label>
 							<label for="diamonds"><img  src="Imagens/Logo1.png" style="width: 8vw; height: 9vh;"><br>
 								<div id="Separador_Esq_carroussel"><img  src="Imagens/Automation-anywhere1.png" style="width: 34vw; height: 28vh;"></div>
-								<div id="Separador_Dir_carroussel" style=" margin-left: -10%;">
+								<div id="Separador_Dir_carroussel" style="right:32vw;">
 									<p class="carroussel" style=" margin-left: -8%;style="font-family:'Mulish', sans-serif;font-size:  1.3vw; text-align:justify;">
 									<br>
 									O Automation Anywhere é uma das maiores tendências do mercado<br>
