--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -184,10 +184,10 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>
 		
 		<div id="Conteudo_rodape" style="margin-top: Calc(0.75vh + 0.75vw);">
-			<br><br>
+			<!--<br><br>
 			<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Telefone/WhatsApp: </h2><h3 class="rodape">(11) 95841-4882</h3><br><br>		 
 			<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Linkedin: </h2><h3 class="rodape">https://www.linkedin.com/company/bulbautomacoes</h3><br><br>
-			<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Email: </h2><h3 class="rodape">contato@bulbautomacoes.com.br</h3><br><br>
+			<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Email: </h2><h3 class="rodape">contato@bulbautomacoes.com.br</h3><br><br> -->
 			
 		</div>
 	</body>
