Update Por que contratar.html

--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -115,7 +115,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			
 		</div>
 		<div id="Conteudo_par" style="height: 50%;" >
-			<div id="Separador_Esq" style="padding-left: 1%; margin-bottom: Calc(-15vh + -15vw);">
+			<div id="Separador_Esq" style="padding-left: 1%; height:94vh;">
 				<h2 style="font-size:1.6vw;font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">A Automação não é algo complexo, pelo contrário, é a facilidade que tanto precisamos</h2>
 			<p style="font-size: 1.05vw;font-family: 'Mulish', sans-serif; color:black;text-align: justify;">
 			Para automatizar demandas, basta seguir um método pré definido e muito bem validado por um mercado
@@ -124,7 +124,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			um projeto pronto para ser implantado.</p>
 				
 			</div>
-			<div id="Separador_Dir" style="margin-bottom: Calc(-15vh + -15vw);">
+			<div id="Separador_Dir" style="height:94vh;">
 				<h2 style="font-size:1.6vw;font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Um mundo tecnológico e automatizado não é futuro,<br> é presente!</h2>
 			<p style="font-size: 1.05vw;font-family: 'Mulish', sans-serif; color:black;text-align: justify;">
 			Pode parecer redundância, mas não é, se você não usufrui de demandas automatizadas em sua organização
