--- a/Contatos.html
+++ b/Contatos.html
@@ -21,7 +21,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<img  src="Imagens/Logo1.png" style="height: 9vh;">
 			<!-- <ul class="list">
 			      <li><a href="Index.html">Home</a></li>
-			      <li><a href="Por que contratar 1.html">Beneficios do Rpa</a></li>
+			      <li><a href="Por que contratar.html">Beneficios do Rpa</a></li>
 			      <li><a href="Quem Somos.html">Quem somos?</a></li>
 			      <li><a href="Contatos.html">Contate-Nos</a></li>
 			    </ul> -->
@@ -37,7 +37,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<div class="Headerinterno">
 				<ul class="list" style="font-family: 'Verdana';">
 				      <li><a href="Index.html"><b>Home</b></a></li>
-				      <li><a href="Por que contratar 1.html"><b>Sobre o RPA<b></a></li>
+				      <li><a href="Por que contratar.html"><b>Sobre o RPA<b></a></li>
 				      <li><a href="Quem Somos.html"><b>Quem Somos?</b></a></li>
 				      <li><a href="Contatos.html"><b>Contate-Nos</b></a></li>
 				    </ul>
