--- a/Contatos.html
+++ b/Contatos.html
@@ -81,7 +81,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				<h3 style=" font-family: 'Mulish', sans-serif; font-size: Calc( 2vh + 2vw) ; color: #ccc;;"><u>Linkedin:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: Calc( 1.3vh + 1.3vw); color: white;">https://www.linkedin.com/company/bulbautomacoes</h3>
 				<h3 style=" font-family: 'Mulish', sans-serif;  Calc( 2vh + 2vw); color: #ccc;"><u>E-mail:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: Calc( 1.3vh + 1.3vw); color: white;">contato@bulbautomacoes.com.br</h3>
 				<img src="Imagens/Indexlogo.png" style="margin-top: Calc( 5vh + 5vw );  margin-left: Calc( 1vh + 1vw ); width: Calc( 20vh + 20vw );">
-				
+				<a class="botao_Quem_somos" href="" style="font-family: 'Verdana';"><b>Tire Suas Duvidas</b></a>
 				</div>
 
 		
@@ -100,6 +100,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				<h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: #ccc;;"><u>Linkedin:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: white;">https://www.linkedin.com/company/bulbautomacoes</h3>
 				<h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: #ccc;"><u>E-mail:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: white;">contato@bulbautomacoes.com.br</h3>
 				<img src="Imagens/bulb prata 50 1.png" style="margin-top: Calc( -1vh + -1vw );  margin-left: Calc( 1vh + 1vw ); width: Calc( 20vh + 20vw );">
+				<a class="botao_Quem_somos" href="" style="font-family: 'Verdana';"><b>Tire Suas Duvidas</b></a>
 				</div>
 
 
