--- a/Contatos.html
+++ b/Contatos.html
@@ -96,11 +96,11 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				<div id="Conteudo_Contatos_topo" >
 
 				<h2 style=" font-family: 'Mulish', sans-serif; font-size: 2.2vw; color: white;">Em caso de dúvidas ou mais informações:</h2>
-				<h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: #ccc;"><u>Telefone/WhatsApp:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: white;">(11) 95841-4882</h3>
-				<h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: #ccc;;"><u>Linkedin:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: white;">https://www.linkedin.com/company/bulbautomacoes</h3>
-				<h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: #ccc;"><u>E-mail:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: white;">contato@bulbautomacoes.com.br</h3>
+				<h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: #ccc; margin-bottom: Calc( -1vw + -1vw );"><u>Telefone/WhatsApp:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: white;">(11) 95841-4882</h3>
+				<h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: #ccc; margin-bottom: Calc( -1vw + -1vw );"><u>Linkedin:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: white;">https://www.linkedin.com/company/bulbautomacoes</h3>
+				<h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: #ccc; margin-bottom: Calc( -1vw + -1vw );"><u>E-mail:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: white;">contato@bulbautomacoes.com.br</h3>
 				<a class="botao_Quem_somos" href="https://bit.ly/3I52qbE" style="font-family:'Verdana';margin-top: Calc( -1vh + -1vw );margin-bottom: Calc( -1vw + -1vw ); width: Calc( 13vh + 13vw );margin-left: Calc( 8vw + 8vw )"><b>Tire Suas Duvidas</b></a>
-				<img src="Imagens/bulb prata 50 1.png" style="margin-top: Calc( -1vh + -1vw );  margin-left: Calc( 1vh + 1vw ); width: Calc( 20vh + 20vw );margin-bottom: Calc( -2vw + -2vw );">
+				<img src="Imagens/bulb prata 50 1.png" style="margin-top: Calc( -1vh + -1vw );  margin-left: Calc( 1vh + 1vw ); width: Calc( 20vh + 20vw );">
 				
 				</div>
 
