--- a/Contatos.html
+++ b/Contatos.html
@@ -77,7 +77,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				<div id="Conteudo_Contatos_topo" >
 
 				<h2 style="margin-top: Calc( 20vh + 20vw ); font-family: 'Mulish', sans-serif; font-size: Calc( 1.7vh + 1.7vw); color: white;">Em caso de dúvidas ou mais informações:</h2>
-				<h3 style=" font-family: 'Mulish', sans-serif; font-size: Calc( 2vh + 2vw) ; color: #ccc;"><u>Telefone/WhatsApp:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: white;">(11) 95841-4882</h3>
+				<h3 style=" font-family: 'Mulish', sans-serif; font-size: Calc( 2vh + 2vw) ; color: #ccc;"><u>Telefone/WhatsApp:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: Calc( 1.3vh + 1.3vw); color: white;">(11) 95841-4882</h3>
 				<h3 style=" font-family: 'Mulish', sans-serif; font-size: Calc( 2vh + 2vw) ; color: #ccc;"><u>Linkedin:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: Calc( 1.3vh + 1.3vw); color: white;">https://www.linkedin.com/company/bulbautomacoes</h3>
 				<h3 style=" font-family: 'Mulish', sans-serif; font-size: Calc( 2vh + 2vw) ; color: #ccc;"><u>E-mail:</u></h3> <h3 style=" font-family: 'Mulish', sans-serif; font-size: Calc( 1.3vh + 1.3vw); color: white;">contato@bulbautomacoes.com.br</h3>
 				<a class="botao_Quem_somos" href="" style="font-family:'Verdana';margin-bottom: Calc( -1vw + -1vw ); width: Calc( 15vh + 15vw );margin-top: Calc( -1vh + -1vw );margin-left: Calc( 15vw + 15vw )"><b>Tire Suas Duvidas</b></a>
