--- a/Index.html
+++ b/Index.html
@@ -77,7 +77,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		</div>
 		<span class="desktop">
 		<!--<div id="Conteudo_zero" style="background-image: url('Imagens/Vemelho1.png');background-position: center;background-repeat: no-repeat;background-size: cover;">-->
-		<div id="Conteudo_zero" style="background-image: url('Imagens/gif1.gif');background-position: center;background-repeat: no-repeat;background-size: cover;">
+		<div id="Conteudo_zero" style="background-image: url('Imagens/bulb1.gif');background-position: center;background-repeat: no-repeat;background-size: cover;">
 			<div id="Logo_Index">
 				<img src="Imagens/Indexlogo.png" style="  margin-left: -5%; height: 37vh; width: 33.2vw;">
 			</div>
@@ -96,7 +96,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
         </span>
         <span class="mobile">
 		<!--<div id="Conteudo_zero" style="background-image: url('Imagens/Vemelho1.png');background-position: center;background-repeat: no-repeat;background-size: cover;">-->
-		<div id="Conteudo_zero" style="background-image: url('Imagens/giphy.gif');background-position: center;background-repeat: no-repeat;background-size: cover;">
+		<div id="Conteudo_zero" style="background-image: url('Imagens/bulb1.gif');background-position: center;background-repeat: no-repeat;background-size: cover;">
 			<div id="Logo_Index">
 				<img alt="Automatização de processos" src="Imagens/Indexlogo.png" style="  margin-left: Calc( -13vh + -13vw ); width: Calc( 40vh + 40vw );">
 			</div>
