--- a/Index.html
+++ b/Index.html
@@ -82,14 +82,14 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				<img src="Imagens/Indexlogo.png" style="  margin-left: -13.5%; height: 37vh; width: 33.2vw; margin-top: -7.0vh;">
 			</div>
 			<h1 style="margin-top: -9.0vh; font-family: 'Georgia'; font-size: 2.2vw;">Automação & Tecnologia</h1>
-			<p class="index" style="font-family: 'Mulish', sans-serif;;margin-top: -0.5%;font-size: 1.2vw;"><b>Com a Bulb, qualquer pessoa ou organização pode fazer parte do universo das automações. Fazendo uso de diversas tecnologias de forma integrada, proporcionamos melhorias de real valor agregado no dia-a-dia de nossos parceiros. <u>O avanço do amanhã começa hoje!</u></b></p>
+			<p class="index" style="font-family: 'Mulish', sans-serif;;margin-top: -1.5%;font-size: 1.2vw;"><b>Com a Bulb, qualquer pessoa ou organização pode fazer parte do universo das automações. Fazendo uso de diversas tecnologias de forma integrada, proporcionamos melhorias de real valor agregado no dia-a-dia de nossos parceiros. <u>O avanço do amanhã começa hoje!</u></b></p>
 			<div id="Separador_Esq">
 				
 				
 			</div>
 			
 			<div id="Separador_Dir">
-				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: ''Verdana';"><b>QUEM SOMOS</b></a>
+				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: ''Verdana'; color: red; background-color: white"><b>QUEM SOMOS</b></a>
 			</div>
 			
 		</div>
