--- a/Index.html
+++ b/Index.html
@@ -271,7 +271,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
                 A automação começou no passado, faz parte do presente e é fundamental para o futuro!
                 Descubra como podemos contribuir com o seu progresso:</h2>
                 
-                	 <a class="botao" href="Contatos.html" style="margin-top: Calc(0.5vh + 0.5vw)">CONTATE-NOS!!!</a> 
+                	 <a class="botao" href="Contatos.html" style="margin-top: Calc(0.5vh + 0.5vw)"><b>CONTATE-NOS!!!</b></a> 
 			</div>
 
 		</div>
