Update Por que contratar.html

--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -82,7 +82,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				
 			</div>
 			<div id="Separador_Dir">
-				<h2 style="font-family: 'Georgia'; color:  White; font-size:2.1vw;">O que exatamente é a tecnologia RPA?</h2>
+				<h2 style="font-family: 'Georgia'; color:hsl(276, 100%, 50%); font-size:2.1vw;">O que exatamente é a tecnologia RPA?</h2>
 			<p style="font-family: 'Mulish', sans-serif; color:  White; text-align: justify; font-size: 1vw;"><b>
 			A sigla RPA, significa Robotic Process Automation, e representa a ideia de automatizar processos de trabalho de forma 100% digital, utilizando ferramentas específicas desta tecnologia.
 			O RPA é algo que está sendo cada vez mais utilizado em pequenos, médios e grandes segmentos do mercado por ser uma forma fácil e versátil de substituir tarefas massivas e repetitivas em algo totalmente autônomo.
