Update Por que contratar.html

--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -78,7 +78,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		</div>
 		<div id="Conteudo_zero">
 			<div id="Separador_Esq">
-				<img src="Imagens/robos trabalhando.jpg" style="width: 49.5vw; height: 73vh;" >
+				<img src="Imagens/robotjob.jpg" style="width: 49.5vw; height: 73vh;" >
 				
 			</div>
 			<div id="Separador_Dir">
