--- a/Index.html
+++ b/Index.html
@@ -118,12 +118,12 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				<div id="Conteudo_Par_Titulo_Serviços">
 					<div id="Titulo_Servicos" >
 						<span class="desktop">
-						<img alt="Automatize + automação Rapida" src="Imagens/prontos.png" style="width: 80%;">
+						<img alt="Automatize + automação Rapida" src="Imagens/prontos.png" style="width: 80%; margin-top: -3vh;">
 						</span>
 						
 					</div>
 					<span class="desktop">
-					<p style="margin-top: -4vh;font-family: 'Mulish', sans-serif; text-align: justify;  color: black; letter-spacing: -10%; font-size: 1vw;"><b style="font-family: 'Verdana';text-align: center; margin-left: 3vw;color: red; font-size: 1.3vw;">ROBÔS PRONTOS</b><br> <br> Trabalhamos com o fornecimento de robôs pré desenvolvidos, para casos onde as demandas são comuns ao mercado e/ou a outros parceiros internos. Nestes casos, o levantamento das características e o desenvolvimento dos robôs fica mais ágil e prático. </p>
+					<p style="margin-top: -3vh;font-family: 'Mulish', sans-serif; text-align: justify;  color: black; letter-spacing: -10%; font-size: 1vw;"><b style="font-family: 'Verdana';text-align: center; margin-left: 3vw;color: red; font-size: 1.3vw;">ROBÔS PRONTOS</b><br> <br> Trabalhamos com o fornecimento de robôs pré desenvolvidos, para casos onde as demandas são comuns ao mercado e/ou a outros parceiros internos. Nestes casos, o levantamento das características e o desenvolvimento dos robôs fica mais ágil e prático. </p>
 					</span>
 					
 				</div>
