--- a/Index.html
+++ b/Index.html
@@ -116,7 +116,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		  
 			<div id="Conteudo_par_Servicos1">
 				<div id="Conteudo_Par_Titulo_Serviços">
-					<div id="Titulo_Servicos" >
+					<div id="Titulo_Servicos" style= margin-top: -3vh;">
 						<span class="desktop">
 						<img alt="Automatize + automação Rapida" src="Imagens/prontos.png" style="width: 80%; margin-top: -3vh;">
 						</span>
