--- a/Index.html
+++ b/Index.html
@@ -138,7 +138,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 						
 					</div>
 					<span class="desktop">
-					<p style="margin-top: -0.5vh;font-family: 'Mulish', sans-serif;; text-align: justify;  color: black; letter-spacing: -10%; font-size: 1vw;"><b style="font-family: 'Verdana';text-align: center; margin-left: 2vw;color: red; font-size: 1.3vw;">SOB DEMANDA</b><br><br>Os robôs sob demandas são projetos desenvolvidos específicamente para cada parceiro, onde um mapeamento detalhado é feito antes de cada execução para entendimento do fluxo de ponta a ponta.</p>
+					<p style="margin-top: -0.5vh;font-family: 'Mulish', sans-serif;; text-align: justify;  color: black; letter-spacing: -10%; font-size: 1vw;"><b style="font-family: 'Verdana';text-align: center; margin-left: 2vw;color: red; font-size: 1.3vw;">SOB DEMANDA</b><br><br>Os robôs sob demandas são projetos desenvolvidos específicamente para cada parceiro, onde um mapeamento detalhado é feito antes de cada execução para entendimento das finalidades e das características do fluxo.</p>
 					</span>
 					
 				</div>
