--- a/Index.html
+++ b/Index.html
@@ -166,7 +166,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 						
 					</div>
 					<span class="desktop">
-					<p style="margin-top: 3vh;font-family: 'Mulish', sans-serif;; text-align: justify;  color: black; letter-spacing: -10%; font-size: 1vw;"><b style="font-family: 'Verdana';text-align: center; margin-left: 6vw;color: red; font-size: 1.3vw;">SUPORTE</b><br> <br>	A Bulb é uma das únicas empresas do mercado que presta suporte para robôs de diversos tipos de ferramentas de RPA, para casos onde já há um parque de robôs desenvolvido e seja necessário apenas a manutenções e/ou acompanhamento contínuo dos robôs</p>
+					<p style="margin-top: 3vh;font-family: 'Mulish', sans-serif;; text-align: justify;  color: black; letter-spacing: -10%; font-size: 1vw;"><b style="font-family: 'Verdana';text-align: center; margin-left: 6vw;color: red; font-size: 1.3vw;">SUPORTE</b><br> <br>	A Bulb é uma das únicas empresas do mercado que presta suporte para robôs de diversos tipos de ferramentas de RPA, para casos onde há um parque de robôs desenvolvido e seja necessário apenas manutenções e/ou acompanhamentos contínuo dos robôs</p>
 					</span>
 					
 				</div>
