--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -202,7 +202,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				<div id="Quemsomoszero" style="background: linear-gradient(red, darkred);padding-left: 2%;padding-right: 2%; ">
 					<h1 style=" font-family: Garamond;font-size: Calc( 2vh + 2vw ); margin-top: Calc( 4vh + 3.1vw ); color: white;">Sobre nós...</h1>
 					<p style=" font-family: Garamond;font-size: Calc( 1.5vh + 1.5vw ); text-align: justify; color: whitesmoke;">
-					A Bulb é uma empresa do ramo da tecnologia focada em automação de processos digitais. Temos propósitos claros devido a grande experiência de seus co-fundadores no mercado.
+					A Bulb é uma empresa do ramo da tecnologia focada em automação de processos digitais e possui propósitos claros devido a grande experiência de seus co-fundadores no mercado.
 					Nosso diferencial é a entrega de soluções de diversos tipos, como: automações prontas, automações autorais, robôs como serviço, suporte, entre outros.
 					<b>A Bulb não foi criada por executivos, mas por desenvolvedores!</b></p>
 
