--- a/Index.html
+++ b/Index.html
@@ -287,7 +287,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				</div>
 					<br><br>
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
-                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 20vh + 20vw );padding-right: 2vw; padding-left: 5vw;text-align: left;"><div id="Conteudo_par_Vantagens_Icone"><img alt="Aumente a capcidade de demandas da sua equipe" src="Imagens/Massa.png" style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.3vh + 2.3vw );font-family: 'Verdana';color: red; ">PRODUÇÃO: </b>
+                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 25vh + 25vw );padding-right: 2vw; padding-left: 5vw;text-align: left;height: Calc( 40vh + 40vw);"><div id="Conteudo_par_Vantagens_Icone"><img alt="Aumente a capcidade de demandas da sua equipe" src="Imagens/Massa.png" style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.3vh + 2.3vw );font-family: 'Verdana';color: red; ">PRODUÇÃO: </b>
                    Com o uso de fluxos automatizados, o expediente de trabalho não tem fim... Os robôs podem ser executados para processamento de demandas massivas, liberando os funcionários humanos para outras tarefas que agregam real valor intelectual.</p>
                    	</div>
 				</div>
