--- a/Index.html
+++ b/Index.html
@@ -281,25 +281,25 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			
 			<div id="Separador_Esq">
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo" style="text-align: justify;">
-					<div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.5vh + 2.5vw );  margin-top: Calc( -4vh + -4vw ); padding-right: 2vw; padding-left: 5vw;text-align: left; height: Calc( 40vh + 40vw);"><div id="Conteudo_par_Vantagens_Icone"><img alt="Acelere suas entregas" src="Imagens/Agilidade.png" style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.5vh + 2.5vw );font-family: 'Verdana';color: red; ">AGILIDADE: </b>
+					<div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.5vh + 2.5vw );  margin-top: Calc( 25vh + 25vw ); padding-right: 2vw; padding-left: 5vw;text-align: left; height: Calc( 40vh + 40vw);"><div id="Conteudo_par_Vantagens_Icone"><img alt="Acelere suas entregas" src="Imagens/Agilidade.png" style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.5vh + 2.5vw );font-family: 'Verdana';color: red; ">AGILIDADE: </b>
                    Os robôs são desenvolvidos baseados em cálculos de economia de tempo por unidade de processamento, contúdo, as demandas automatizadas tornam-se mais ágeis do que as manuais.</p>
                     </div>
 				</div>
 					<br><br>
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
-                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 25vh + 25vw );padding-right: 2vw; padding-left: 5vw;text-align: left;height: Calc( 40vh + 40vw);"><div id="Conteudo_par_Vantagens_Icone"><img alt="Aumente a capcidade de demandas da sua equipe" src="Imagens/Massa.png" style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.3vh + 2.3vw );font-family: 'Verdana';color: red; ">PRODUÇÃO: </b>
+                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 25vh + 25vw ); padding-right: 2vw; padding-left: 5vw;text-align: left;height: Calc( 40vh + 40vw);"><div id="Conteudo_par_Vantagens_Icone"><img alt="Aumente a capcidade de demandas da sua equipe" src="Imagens/Massa.png" style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.3vh + 2.3vw );font-family: 'Verdana';color: red; ">PRODUÇÃO: </b>
                    Com o uso de fluxos automatizados, o expediente de trabalho não tem fim... Os robôs podem ser executados para processamento de demandas massivas, liberando os funcionários humanos para outras tarefas que agregam real valor intelectual.</p>
                    	</div>
 				</div>
 					<br><br>
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
-                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 44vh + 44vw );padding-right: 2vw; padding-left: 5vw;text-align: left;"><div id="Conteudo_par_Vantagens_Icone"><img alt="Automatize quallquer sistema ou site" src="Imagens/Dinamismo.png"style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.5vh + 2.5vw );font-family: 'Verdana';color: red; width: 30%;">DINAMISMO: </b>
+                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 25vh + 25vw );padding-right: 2vw; padding-left: 5vw;text-align: left;height: Calc( 40vh + 40vw);"><div id="Conteudo_par_Vantagens_Icone"><img alt="Automatize quallquer sistema ou site" src="Imagens/Dinamismo.png"style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.5vh + 2.5vw );font-family: 'Verdana';color: red; width: 30%;">DINAMISMO: </b>
                    O dinamismo de uma automação passa pela capacidade do robô de realizar mais de uma tarefa em um fluxo cíclico, onde demandas em cadeia podem ser mapeadas para gerar uma saída a partir de várias entradas.</p>
                    	</div>
 				</div>
 						<br><br>
                    <div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
-                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 68vh + 68vw );padding-right: 2vw; padding-left: 5vw;text-align: left; height:  66vh;"><div id="Conteudo_par_Vantagens_Icone"><img alt="Torne suas automações ou seus projetos mais precisos" src="Imagens/Precisao.png"style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.3vh + 2.3vw );font-family: 'Verdana';color: red;">PRECISÃO: </b>
+                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 68vh + 68vw );padding-right: 2vw; padding-left: 5vw;text-align: left; height: Calc( 40vh + 40vw);"><div id="Conteudo_par_Vantagens_Icone"><img alt="Torne suas automações ou seus projetos mais precisos" src="Imagens/Precisao.png"style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.3vh + 2.3vw );font-family: 'Verdana';color: red;">PRECISÃO: </b>
                    Com um levantamento preciso das necessidades do fluxo, os robôs executam tarefas precisas durante toda a produção. Diferentemente de um humano, os robôs não sofrem com cansaço, estresse e outros fatores do tipo, podendo gerar do começo ao fim da execução, resultados no mesmo padrão.</p>
                    	</div>
 				</div>
