--- a/Index.html
+++ b/Index.html
@@ -305,11 +305,11 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				</div>
 
                    	<div id="Separador_Dir">
-				<h1 style="font-family: 'Verdana'; margin-top: Calc( 5.0vh + 5.0vw ); font-size: Calc( 3.0vh + 3.0vw ); color:red;">Transformação Digital</h1>
+				<h1 style="font-family: 'Verdana'; margin-top: Calc( 8.0vh + 8.0vw ); font-size: Calc( 3.0vh + 3.0vw ); color:red;">Transformação Digital</h1>
                <h2 style="font-family:'Mulish', sans-serif;; text-align: justify; font-size: Calc( 2vh + 2vw );margin-top: 0.5vh; font-style: bold;"> Utilize uma tecnologia acessível a todos para iniciar o avanço tecnológico da sua organização.
                 A automação começou no passado, faz parte do presente e é fundamental para o futuro!
                 <br><u>Descubra como podemos contribuir com o seu progresso:</u></h2>
-                <a class="botao" href="Contatos.html" style="margin-left: Calc( 6.0vh + 6.0vw );width: Calc( 26.0vh + 26.0vw ); font-size: Calc( 1.8vh + 1.8vw ); height: Calc( 6.5vh + 6.5vw ); " ><b>CONTATE-NOS!!!</b></a>
+                <a class="botao" href="Contatos.html" style="margin-left: Calc( 6.0vh + 6.0vw ); margin-top: Calc( 2.0vh + 2.0vw ); width: Calc( 26.0vh + 26.0vw ); font-size: Calc( 1.8vh + 1.8vw ); height: Calc( 6.5vh + 6.5vw ); " ><b>CONTATE-NOS!!!</b></a>
                 	  		               
 				</div>
 				
