--- a/Index.html
+++ b/Index.html
@@ -300,14 +300,13 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 						<br><br>
                    <div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
                    <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 79vh + 79vw );padding-right: 2vw; padding-left: 5vw;text-align: left; height: Calc( 40vh + 40vw);"><div id="Conteudo_par_Vantagens_Icone"><img alt="Torne suas automações ou seus projetos mais precisos" src="Imagens/Precisao.png"style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.3vh + 2.3vw );font-family: 'Verdana';color: red;">PRECISÃO: </b>
-                   Com um levantamento preciso das necessidades do fluxo, os robôs executam tarefas precisas durante toda a produção. Diferentemente de um humano, os robôs não sofrem com cansaço, estresse e outros fatores do tipo, podendo gerar do começo ao fim da execução, resultados no mesmo padrão.</p>
+                   Os robôs executam tarefas precisas durante toda a produção. Diferentemente de um humano, os robôs não sofrem com cansaço, estresse e outros fatores do tipo, podendo gerar do começo ao fim da execução, resultados no mesmo padrão.</p>
                    	</div>
 				</div>
 
                    	<div id="Separador_Dir">
 				<h1 style="font-family: 'Verdana'; margin-top: Calc( 13.0vh + 13.0vw ); font-size: Calc( 3.0vh + 3.0vw ); color:red;">Transformação Digital</h1>
                <h2 style="font-family:'Mulish', sans-serif;; text-align: justify; font-size: Calc( 2vh + 2vw );margin-top: 0.5vh; font-style: bold;"> Utilize uma tecnologia acessível a todos para iniciar o avanço tecnológico da sua organização.
-                A automação começou no passado, faz parte do presente e é fundamental para o futuro!
                 <br><u>Descubra como podemos contribuir com o seu progresso:</u></h2>
                 <a class="botao" href="Contatos.html" style="margin-left: Calc( 6.0vh + 6.0vw ); margin-top: Calc( 2.0vh + 2.0vw ); width: Calc( 26.0vh + 26.0vw ); font-size: Calc( 1.8vh + 1.8vw ); height: Calc( 6.5vh + 6.5vw ); " ><b>CONTATE-NOS!!!</b></a>
                 	  		               
