--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		<!--<header>Teste</header>-->
 			<div class="Headerinterno">
 				<ul class="list" style="font-family: 'Verdana';">
-				      <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio" style="color: rgb(184, 134, 11, 0.5);"><b>The Herald</b></a></li>
+				      <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio"><b>The Herald</b></a></li>
 				      <li><a href="Index.html"><b>Home</b></a></li>
 				      <li><a href="Por que contratar.html"><b>Sobre o RPA<b></a></li>
 				      <li><a href="Quem Somos.html"><b>Quem Somos?</b></a></li>
